Release aggregate stats heartbeat runtime